--- a/src/app/components/result/result.component.scss
+++ b/src/app/components/result/result.component.scss
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.video-section {
+.header-section {
   position: relative;
   width: 100%;
   height: 40vh;
@@ -16,14 +16,23 @@
   }
 }
 
-#backgroundVideo {
+.wait-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vh;
+  text-align: center;
+}
+
+#backgroundImg {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top center;
+  object-position: center;
 }
 
-.video-overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -274,11 +283,17 @@
     width: 100%;
   }
 
-  .contact-fields {
+  .contact-fields, .contact-fields-message {
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
     max-width: 350px;
+    input {
+      text-align: left;
+    }
+  }
+  .contact-fields-message {
+    max-width: 450px;
   }
 
   .contact-footer {
@@ -291,16 +306,17 @@
     color: $dark-grey;
     max-width: 38rem;
     font-size: 0.8rem;
-    margin-top: 1rem;
+    margin-top: 0.6rem;
+    margin-bottom: 0.4rem;
   }
 
   .pricing-main-footer {
     margin: 1rem;
   }
   .pricing-main-footer-subtitle {
+    text-align: justify;
     font-size: 0.8rem;
-    margin-top: 1rem;
-    margin-bottom: 0;
+    margin: 1rem auto 0;
   }
 }
 
@@ -338,21 +354,38 @@
 .pricing-card-adjust {
   padding-bottom: 2rem;
 }
-
-.tracking-in-expand {
-  animation: tracking-in-expand 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+#contact-card {
+  min-height: 10rem;
 }
-@keyframes tracking-in-expand {
-  0% {
-    letter-spacing: -0.5em;
-    opacity: 0;
+.contact-card-content-spinner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sent-email {
+  color: $dark-green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  padding: 1rem 1.5rem 0;
+  font-size: 1.5rem;
+  font-weight: $bold-font-weight;
+  mat-icon {
+    color: $dark-green;
+    $size: 70px;
+    font-size: $size;
+    height: $size;
+    width: $size;
+    line-height: $size;
+    margin-right: 1.5rem;
   }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    opacity: 1;
-  }
+}
+
+mat-error {
+  font-size: 0.8rem;
 }
 
 @media (max-width: 900px) {
@@ -395,3 +428,6 @@
     width: 90%;
   }
 }
+
+
+
