--- a/src/app/shared-components/policy/policy.component.html
+++ b/src/app/shared-components/policy/policy.component.html
@@ -35,5 +35,5 @@
 
 </mat-dialog-content>
 <mat-dialog-actions align="end" *ngIf="buttonVisible">
-  <button mat-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+  <button mat-button color="primary" [mat-dialog-close]="true">Ok</button>
 </mat-dialog-actions>
