--- a/src/app/components/home-page_old/home-page.component.scss
+++ b/src/app/components/home-page_old/home-page.component.scss
@@ -25,7 +25,7 @@
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 10px;
-  white-space: nowrap;
+  white-space:nowrap;
 }
 
 .logo-image {
@@ -77,31 +77,27 @@
   }
 }
 
-
-@media (max-width: 500px) {
-  .content {
-    padding: 0;
-    border-radius: 0;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
+@media (max-width: 1100px) {
+  .buttons-container {
+    .buttons {
+      flex-direction: column;
+    }
   }
+  .title {
+    margin: 2rem 0;
+  }
+}
+@media (max-width: 700px) {
 
   .logo {
-    margin-top: 2rem;
-    font-size: 1rem;
+    margin-top: 1rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 10px;
     white-space:nowrap;
   }
 
-  .logo-image {
-    max-height: 1rem;
-  }
-
   .title {
-    margin: 2rem 0;
-
     h1 {
       font-size: 2.62rem;
       margin: 0;
@@ -111,12 +107,25 @@
       margin: 0 0 -0.7rem;
     }
   }
+  .content {
+    padding: 1rem;
+    margin: 1rem auto;
+    text-align: center;
+  }
+  .buttons-container {
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .content {
+    margin: 1rem;
+  }
 
   .buttons-container {
     margin: 2rem auto;
-    .buttons {
-      flex-direction: column;
-    }
     p {
       font-size: 1.5rem;
     }
