--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow-y: auto;
+  overflow: hidden;
   background-size: cover;
   background-position: left top;
   background-repeat: no-repeat;
@@ -108,12 +108,12 @@
     }
     h2 {
       font-size: 1.5rem;
-      margin: 0 0 -0.7rem;
+      margin: 0 0 -0.4rem;
     }
   }
 
   .buttons-container {
-    margin: 2rem auto;
+    padding: 1rem;
     .buttons {
       flex-direction: column;
     }
