--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,7 +1,9 @@
 <div class="homepage" style="background-image: url('/home-background.png');">
   <div class="content">
-      <div class="logo">
-        <img src="/logo-white.png" alt="Logo" class="logo-image">ILEKOSZTUJEPV.PL</div>
+      <div class="address-logo-title">
+        <img src="/logo-white.png" alt="Logo" class="logo-image">
+        WYCENPV.PL
+      </div>
       <div class="title">
         <h2>BEZPŁATNY KALKULATOR</h2>
         <h1>FOTOWOLTAIKI</h1>
